--- a/index.html
+++ b/index.html
@@ -13,11 +13,87 @@
         <input type="radio" name="slide" id="slide" checked>
         <div class="slide">
           <div class="face face1">
-            <img src="img/bg1.jfif" alt="">
+            <img src="img/bg-msn-1.jfif" alt="">
           </div>
           <div class="face face2">
             <div class="content">
-              <h2>A Força que Existe em Você</h2>
+              <h2>Querida Chatolina</h2>
+              <p>Saiba que Deus está sempre ao seu lado, guiando cada passo que você dá, mesmo nos momentos em que as coisas parecem difíceis. Acredite no propósito d'Ele para a sua vida, pois Ele tem planos lindos para você. Quando sentir que o caminho está pesado, lembre-se que Ele nunca coloca um fardo maior do que podemos suportar. Você é forte, capaz, e cheia de luz.</p>
+              <p>Estou aqui para te apoiar em tudo, e juntos vamos superar qualquer desafio. Confie que dias melhores virão, e eu estarei ao seu lado em cada um deles.💖</p>
+            </div>
+          </div>
+        </div>
+      </li>
+
+      <li>
+        <input type="radio" name="slide" id="slide">
+        <div class="slide">
+          <div class="face face1">
+            <img src="img/bg-msn-2.jpeg" alt="">
+          </div>
+          <div class="face face2">
+            <div class="content">
+              <h2>Juntos Somos Invencíveis</h2>
+              <p>Chatolina, queria te lembrar que, em cada desafio, há uma oportunidade de crescimento, e você é uma pessoa incrível, capaz de superar qualquer obstáculo. Nos momentos difíceis, respire fundo e confie em si mesmo, porque você tem uma força imensa dentro de você. Eu acredito em você com todo o meu coração e estarei aqui, segurando sua mão em cada passo dessa jornada. Nunca se esqueça do quanto você é especial, e de como juntos podemos enfrentar o mundo inteiro. Gosto muito de você!</p>
+            </div>
+          </div>
+        </div>
+      </li>
+
+      <li>
+        <input type="radio" name="slide" id="slide">
+        <div class="slide">
+          <div class="face face1">
+            <img src="img/bg-msn-3.jpg" alt="">
+          </div>
+          <div class="face face2">
+            <div class="content">
+              <h2>Para Sempre ao Seu Lado</h2>
+              <p>Meu anjo, saiba que, não importa o que aconteça, eu estarei sempre ao seu lado. Nos momentos bons e nos mais difíceis, você nunca estará sozinho, porque eu jamais vou te abandonar. A sua força e o seu coração me inspiram todos os dias, e estarei aqui, te apoiando em cada passo que você der. Juntos, somos mais fortes, e eu acredito com todo o meu ser que vamos superar qualquer obstáculo. Você é tudo para mim, e estarei contigo, sempre.</p>
+            </div>
+          </div>
+        </div>
+      </li>
+
+      <li>
+        <input type="radio" name="slide" id="slide">
+        <div class="slide">
+          <div class="face face1">
+            <img src="img/bg-msn-4.jfif" alt="">
+          </div>
+          <div class="face face2">
+            <div class="content">
+              <h2>Juntos, Sempre Mais Fortes</h2>
+              <p>Natalia, quero que você saiba que, independentemente do que esteja passando, você nunca precisa carregar tudo sozinho. Pode dividir os seus problemas comigo, suas preocupações e seus medos. Estou aqui para te apoiar em cada momento, seja ele leve ou pesado. Juntos, somos mais fortes e podemos enfrentar qualquer coisa. Confie em mim, porque assim como eu divido minhas alegrias com você, também quero estar presente nas dificuldades. Estarei sempre ao seu lado, te dando força e carinho. Estamos nessa jornada juntos</p>
+            </div>
+          </div>
+        </div>
+      </li>
+
+      <li>
+        <input type="radio" name="slide" id="slide">
+        <div class="slide">
+          <div class="face face1">
+            <img src="img/bg-msn-5.jpeg" alt="">
+          </div>
+          <div class="face face2">
+            <div class="content">
+              <h2>A Mulher Incrível que Me Inspira</h2>
+              <p>Natalia, preciso te dizer o quanto você é uma mulher incrível. Sua força, determinação e coração generoso me inspiram todos os dias. Você é linda, por dentro e por fora, e o jeito como enfrenta os desafios com coragem me enche de admiração. Eu sou tão grato por ter você ao meu lado, e quero que saiba o quanto você é especial para mim e para o mundo. Nunca duvide do seu valor, porque você é única, e eu tenho tanto orgulho da pessoa maravilhosa que você é. Te amo demais!</p>
+            </div>
+          </div>
+        </div>
+      </li>
+
+      <li>
+        <input type="radio" name="slide" id="slide">
+        <div class="slide">
+          <div class="face face1">
+            <img src="img/bg-msn-7.jpeg" alt="">
+          </div>
+          <div class="face face2">
+            <div class="content">
+              <h2>A Força Incrível que Existe em Você, Natalia!</h2>
               <p>Natalia, queria te lembrar o quanto você é incrível. Sei que às vezes as coisas podem parecer desafiadoras, mas confio plenamente na sua força e capacidade de superar qualquer obstáculo. Você é capaz de coisas maravilhosas, e eu tenho tanto orgulho de você! Não esqueça que estarei sempre ao seu lado, torcendo por cada conquista e te apoiando em cada passo. Continue brilhando e sendo essa pessoa especial que só você sabe ser. Eu gosto muito de você, e juntos podemos enfrentar qualquer coisa!</p>
             </div>
           </div>
@@ -28,11 +104,26 @@
         <input type="radio" name="slide" id="slide">
         <div class="slide">
           <div class="face face1">
-            <img src="img/bg2.jfif" alt="">
+            <img src="img/bg-msn-6.jpeg" alt="">
           </div>
           <div class="face face2">
             <div class="content">
-              <h2>Juntos Somos Invencíveis</h2>
+              <h2>Protegida por Deus e por Mim</h2>
+              <p>Chatolina, quero que você nunca esqueça que Deus está sempre ao seu lado, guiando e protegendo cada passo que você dá. Ele conhece a sua força e o seu coração, e tenho certeza de que está cuidando de você a cada instante. E assim como Ele cuida, eu também quero estar aqui para te proteger e te apoiar em tudo que precisar. Me deixe ser o seu refúgio, aquele que te acolhe nos momentos difíceis e te faz sorrir nos dias bons. Você é meu tesouro mais precioso, e farei de tudo para te ver feliz e segura. Te amo com todo o meu coração!</p>
+            </div>
+          </div>
+        </div>
+      </li>
+
+      <li>
+        <input type="radio" name="slide" id="slide">
+        <div class="slide">
+          <div class="face face1">
+            <img src="img/bg-msn-8.jfif" alt="">
+          </div>
+          <div class="face face2">
+            <div class="content">
+              <h2>Acreditando em Cada Passo Seu</h2>
               <p>Meu anjo, eu acredito tanto em você. Cada desafio que aparece é só mais uma oportunidade de você mostrar o quanto é forte e determinada. Mesmo nos dias mais difíceis, lembre-se de que você já superou tantas coisas, e vai continuar conquistando muito mais. Eu estou sempre aqui, torcendo por você, admirando sua coragem e seu coração enorme. Você é capaz de realizar tudo o que sonha, e vou estar ao seu lado em cada vitória, grande ou pequena. Te amo, e estou aqui para o que precisar!</p>
             </div>
           </div>
@@ -43,11 +134,11 @@
         <input type="radio" name="slide" id="slide">
         <div class="slide">
           <div class="face face1">
-            <img src="img/bg3.jfif" alt="">
+            <img src="img/bg-msn-9.jpeg" alt="">
           </div>
           <div class="face face2">
             <div class="content">
-              <h2>Minha Inspiração, Minha Luz</h2>
+              <h2>Juntos na Jornada</h2>
               <p>Chatolina, queria te lembrar que o caminho pode ser difícil às vezes, mas você tem tudo o que precisa para vencer. Sua força, sua determinação e o brilho que você carrega dentro de si são incríveis. Nunca duvide do seu potencial, porque eu acredito em você mais do que qualquer coisa. Sempre estarei ao seu lado, te apoiando em cada passo dessa jornada. Vamos juntos, sempre!</p>
             </div>
           </div>
@@ -58,11 +149,11 @@
         <input type="radio" name="slide" id="slide">
         <div class="slide">
           <div class="face face1">
-            <img src="img/bg4.jpg" alt="">
+            <img src="img/bg-msn-10.jpeg" alt="">
           </div>
           <div class="face face2">
             <div class="content">
-              <h2>O Orgulho de Te Amar</h2>
+              <h2>A Sua Força é Admirável</h2>
               <p>Você é tão especial, e eu sinto tanto orgulho de tudo o que já conquistou. Sei que você ainda vai longe, porque sua capacidade de superar desafios e continuar em frente é admirável. Quando as dúvidas aparecerem, lembre-se de que estou aqui, acreditando em você e torcendo por cada uma das suas vitórias. Vai com tudo, Chatolina!</p>
             </div>
           </div>
@@ -73,12 +164,12 @@
         <input type="radio" name="slide" id="slide">
         <div class="slide">
           <div class="face face1">
-            <img src="img/bg5.jfif" alt="">
+            <img src="img/bg-msn-11.jpeg" alt="">
           </div>
           <div class="face face2">
             <div class="content">
-              <h2>Você Nunca Estará Sozinha</h2>
-              <p>Natalia, queria que você soubesse o quanto admiro a sua força e a pessoa incrível que você é. Às vezes, a vida nos coloca em situações difíceis, mas tenho certeza de que você vai superar tudo, porque dentro de você há uma luz que ilumina até os momentos mais escuros. Eu te amo tanto, e sinto um orgulho imenso de estar ao seu lado, te apoiando e acreditando em cada passo que você dá. Você é meu maior motivo de inspiração, e estarei sempre aqui, não importa o que aconteça. Juntos, somos imbatíveis!</p>
+              <h2>A Luz que Brilha em Você</h2>
+              <p>Natalia, queria que você soubesse o quanto admiro a sua força e a pessoa incrível que você é. Às vezes, a vida nos coloca em situações difíceis, mas tenho certeza de que você vai superar tudo, porque dentro de você há uma luz que ilumina até os momentos mais escuros. Eu te amo tanto, e sinto um orgulho imenso de estar ao seu lado, te apoiando e acreditando em cada passo que você dá. Você é meu maior motivo de inspiração, e estarei sempre aqui, não importa o que aconteça.</p>
             </div>
           </div>
         </div>
@@ -88,11 +179,11 @@
         <input type="radio" name="slide" id="slide">
         <div class="slide">
           <div class="face face1">
-            <img src="img/bg6.jpeg" alt="">
+            <img src="img/bg-msn-12.jpeg" alt="">
           </div>
           <div class="face face2">
             <div class="content">
-              <h2>Acredite no Seu Brilho</h2>
+              <h2>Seu Refúgio Sempre!</h2>
               <p>Chatolina, você é a pessoa mais especial que conheço, e cada dia ao seu lado me faz perceber o quanto você é forte, resiliente e cheia de amor. Eu sei que às vezes as coisas parecem pesadas, mas quero que saiba que nunca estará sozinha. Quando tudo parecer difícil, abrece o Renanzinho e deixe ele me representar, ser o seu refúgio. Você tem uma alma linda e uma capacidade incrível de vencer qualquer desafio. Eu acredito em você com todo o meu coração e sempre estarei aqui, te amando e apoiando, não importa o que aconteça.</p>
             </div>
           </div>
